--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,58 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./stylesheets/style.css" />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-md-4">
+          <p>Current Score : <span id="current-score">0</span></p>
+          <p>High Score : <span id="high-score">0</span></p>
+        </div>
+        <div class="col-md-4 text-center">
+          <div class="main-container">
+            <h4 class="text-center" id="counter-time-left">10</h4>
+            <p class="text-center" id="counter">Second Left</p>
+            <h3>
+              <span id="firstValue"></span> <span id="operatorUsed"></span>
+              <span id="secondValue"></span>
+            </h3>
+            <input type="number" class="form-control" id="answer-box" />
+            <input
+              type="checkbox"
+              name="operators[]"
+              value="+"
+              id="plus"
+              checked
+            />
+            <span class="font-weight-bold">+</span>
+            <input type="checkbox" name="operators[]" value="-" id="minus" />
+            <span class="font-weight-bold">-</span>
+            <input type="checkbox" name="operators[]" value="*" id="*" />
+            <span class="font-weight-bold">*</span>
+            <input type="checkbox" name="operators[]" value="/" id="divide" />
+            <span class="font-weight-bold">/</span>
+            <br />
+            <br />
+            <p class="text-center" id="range-indicator">10</p>
+            <input type="range" id="limit" min="10" max="50" step="5" />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"
+  ></script>
+  <script type="text/javascript" src="./javascripts/app.js"></script>
 </html>
