Final After Live

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>10 Seconds Math App</title>
+    <title><%= title %></title>
 
     <link
       rel="stylesheet"
@@ -43,6 +43,7 @@
             <span class="font-weight-bold">/</span>
             <br />
             <br />
+            <h4 class="text-center">Number Limit</h4>
             <p class="text-center" id="range-indicator">10</p>
             <input type="range" id="limit" min="10" max="50" step="5" />
           </div>
